# talib-wasm

./: build-debug.sh  package.json  webpack.config.js
cpp/: CMakeLists.txt  build.sh
cpp/lib/: ta-lib
cpp/test/: CMakeLists.txt  main.cpp
cpp/test/talib/: talib.test.cpp
src/: index.js
ta-lib-source/src/ta_func/: ta_STOCH.c
test/: init.spec.ts
